# Colorbot2-47332

./: .gitignore  47332.bashrc  Dockerfile  README.md  colab_notebook.ipynb  pyproject.toml  setup
config_files/: config.json
legobot/: MANIFEST.in  setup.py
pump_controller/: config.json  pump_controller.py
teacher_notebooks/: 2021_Color_Mixing_and_Optimization_InSilico.ipynb  2021_Error_Correcting_NN_InSilico_LEGO_combination.ipynb  Color_Mixing_and_Optimization_InSilico.ipynb  Exercises_HTC_solutions.ipynb  InSilico_color_mixing_and_optimization_exercise.ipynb  Test_Connections - Copy.ipynb  Test_positions.ipynb  exercise-Dragonfly-InSilico.ipynb  exercise-InSilico-NN.ipynb  exercise-LEGO_color_mixing_and_optimization.ipynb  exercise_dragonfly_lego.ipynb  exercise_error_correcting_NN.ipynb  exercise_false_optimum_part1.ipynb  exercise_false_optimum_part2.ipynb  teacher_2021_example_InSilico_optimization.ipynb  teacher_exercise-Dragonfly-InSilico.ipynb  teacher_exercise-Dragonfly-InSilico_true.ipynb  teacher_exercise-InSilico-NN.ipynb  teacher_exercise0-test_connections.ipynb  teacher_exercise1-InSilico_color_mixing_and_optimization.ipynb  teacher_exercise2-LEGO_color_mixing_and_optimization--turquis_optimization - Copy.ipynb  teacher_exercise2-LEGO_color_mixing_and_optimization.ipynb  teacher_exercise2-LEGO_color_mixing_and_optimization_long_orange_run_at_end.ipynb  teacher_exercise_dragonfly_lego.ipynb  teacher_exercise_error_correcting_NN.ipynb  teacher_exercise_error_correcting_NN_local.ipynb  teacher_exercise_false_optimum_part1.ipynb  (+1 more)
(+46 files in other folders)
